Fixed image loading bug (I hope)